# Gravel-2D---Graphics-Engine

./: CMakeLists.txt  LICENSE  README.md  escena.json
Assets/: escena.json
Engine/: main.cpp
Engine/Core/: Entity.h  Images.h  Loader.cpp  Loader.h  ResourceManager.cpp  ResourceManager.h
Engine/Core/Scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Graphics/: Framebuffer.cpp  Framebuffer.h  RenderEngine.cpp  RenderEngine.h
Engine/Utils/: BMP.cpp  BMP.h  DynamicSceneJSON.cpp  DynamicSceneJSON.h
